# mongotriggers

./: .travis.yml  LICENSE  README.md  README.rst  setup.cfg  tox.ini
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  examples.rst  index.rst  install.rst  modules.rst  mongotriggers.rst  support.rst
mongotriggers/: __init__.py  mongodtriggers.py  mongotriggers.py
tests/: test_mongotriggers.py
