[metadata]
name = mongotriggers
author = Dror Asaf
author-email = drorasaf87@gmail.com
summary = livedata for MongoDB, similar to RDBM triggers or meteorjs livedata
description-file = README.rst
home-page = https://github.com/drorasaf/mongotriggers/
license = BSD
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database


[files]
packages = mongotriggers


[bdist_wheel]
universal = True
